feat: 什么值得买签到

--- a/sg_config.json
+++ b/sg_config.json
@@ -6,5 +6,10 @@
     {
       "cookie": "多账号 url 填写，请参考上面，url 以实际获取为准（遇到特殊字符如双引号\\\" 请加反斜杠转义）"
     }
+  ],
+  "SMZDM": [
+    {
+      "cookie": "__jsluid_s=xxxxxx; __ckguid=xxxxxx; device_id=xxxxxx; homepage_sug=xxxxxx; r_sort_type=xxxxxx; _zdmA.vid=xxxxxx; sajssdk_2015_cross_new_user=xxxxxx; sensorsdata2015jssdkcross=xxxxxx; footer_floating_layer=xxxxxx; ad_date=xxxxxx; ad_json_feed=xxxxxx; zdm_qd=xxxxxx; sess=xxxxxx; user=xxxxxx; _zdmA.uid=xxxxxx; smzdm_id=xxxxxx; userId=xxxxxx; bannerCounter=xxxxxx; _zdmA.time=xxxxxx;"
+    }
   ]
 }
