--- a/sg_config.json
+++ b/sg_config.json
@@ -4,12 +4,9 @@
       "cookie": "_ntes_nuid=xxx; _ns=xxx; _ntes_nnid=xxx; UM_distinctid=xxx; NMTID=xxx; WNMCID=xxx; WEVNSM=xxx; __csrf=xxx; MUSIC_U=xxx; ntes_kaola_ad=xxx; _iuqxldmzr_=xxx; JSESSIONID-WYYY=xxx;"
     },
     {
-      "cookie": "多账号 url 填写，请参考上面，url 以实际获取为准（遇到特殊字符如双引号\\\" 请加反斜杠转义）"
-    }
-  ],
-  "SMZDM": [
-    {
-      "cookie": "__jsluid_s=xxxxxx; __ckguid=xxxxxx; device_id=xxxxxx; homepage_sug=xxxxxx; r_sort_type=xxxxxx; _zdmA.vid=xxxxxx; sajssdk_2015_cross_new_user=xxxxxx; sensorsdata2015jssdkcross=xxxxxx; footer_floating_layer=xxxxxx; ad_date=xxxxxx; ad_json_feed=xxxxxx; zdm_qd=xxxxxx; sess=xxxxxx; user=xxxxxx; _zdmA.uid=xxxxxx; smzdm_id=xxxxxx; userId=xxxxxx; bannerCounter=xxxxxx; _zdmA.time=xxxxxx;"
+      "cookie": "多账号 url 填写，请参考上面，url 以实际获取为准（遇到特殊字符如双引号\\\" 请加反斜杠转义）",
+      "extra_count": 7,
+      "commit": false
     }
   ],
   "NINEBOT": [
